--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "peer-info": "~0.14.1",
     "progress": "^2.0.0",
     "promisify-es6": "^1.0.3",
+    "protons": "^1.0.1",
     "pull-abortable": "^4.1.1",
     "pull-defer": "~0.2.2",
     "pull-file": "^1.1.0",
@@ -162,6 +163,7 @@
     "pull-stream": "^3.6.8",
     "pull-stream-to-stream": "^1.3.4",
     "pull-zip": "^2.0.1",
+    "quick-lru": "^1.1.0",
     "read-pkg-up": "^4.0.0",
     "readable-stream": "2.3.6",
     "stream-to-pull-stream": "^1.7.2",
