--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "quick-lru": "^1.1.0",
     "read-pkg-up": "^4.0.0",
     "readable-stream": "2.3.6",
+    "receptacle": "^1.3.2",
     "stream-to-pull-stream": "^1.7.2",
     "tar-stream": "^1.6.1",
     "temp": "~0.8.3",
