--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "ipld": "~0.17.3",
     "ipld-dag-cbor": "~0.12.1",
     "ipld-dag-pb": "~0.14.6",
-    "ipns": "^0.1.1",
+    "ipns": "~0.1.1",
     "is-ipfs": "~0.4.2",
     "is-pull-stream": "~0.0.0",
     "is-stream": "^1.1.0",
